--- a/templates/service_inform/service_form.html
+++ b/templates/service_inform/service_form.html
@@ -1,15 +1,20 @@
 {% extends 'base.html' %}
 
 {% block contain %}
-    <div class="alert alert-{{ message.tags }}">
-        <a href="#" class="close" data-dismiss="alert">&times;</a>
-        <strong>{{ message }}</strong>
-    </div>
+<!--这里是一个关闭按钮，但是我感觉并不需要用到。-->
+<!--<div class="alert alert-{{ message.tags }}">-->
+<!--<a href="#" class="close" data-dismiss="alert">&times;</a>-->
+<!--<strong>{{ message }}</strong>-->
+<!--</div>-->
 
-    <h2>填service表格</h2>
+<div class="middle-container">
+  <div class="middle-wrap">
+    <h2>填写信息</h2>
     <form method="post" action="">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">提交</button>
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit">提交</button>
     </form>
+  </div>
+</div>
 {% endblock contain %}
