--- a/static/site/css/main.css
+++ b/static/site/css/main.css
@@ -1,22 +1,17 @@
 html {
   font-size : 20px;
   height: 100%;
-  background-color: #000;
 }
+
 body {
-  height: 100%;
-  min-width: 400px;
   background-position: top;
   background-size: 100%;
   background-repeat: no-repeat;
-  background-image: url('/static/site/img/hustca_logo.png');
-  background-color: #000;
-  /*background-color: #f1f1f1;*/
-  overflow-y: scroll;
+  background-color: #301b56;
 }
 
 .middle-container {
-  width: 90%;
+  width: 100%;
   max-width: 25rem;
   margin: 0 auto;
   padding: 4rem 0;
@@ -26,11 +21,8 @@ body {
   color: #FFFFFF;
   width: 90%;
   margin: 0 auto;
-  padding: 2rem;
-  /*background-color: #FFFFFF;*/
-  /*background-color: #9C27B0;*/
-  background-color: rgba(55, 55, 55, 0.8);
-  /*box-shadow: 0px 1px 4px #ArA;*/
+  padding: 6%;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .middle-wrap h2 {
@@ -49,7 +41,7 @@ body {
 }
 
 input {
-  background-color: #444444;
+  background-color: transparent;
   display: block;
   padding: .4rem;
   margin: 1rem auto;
@@ -58,15 +50,11 @@ input {
   outline: none;
   width: 80%;
 }
-/*input:-webkit-autofill {*/
-  /*background-color: #FFF;*/
-/*}*/
 
 input:-webkit-autofill,
 input:-webkit-autofill:focus
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:focus {
-  /*border: 1px solid green;*/
   -webkit-text-fill-color: #FFFFFF;
   -webkit-box-shadow: 0 0 0px 1000px #333333 inset;
   transition: background-color 5000s ease-in-out 0s;
@@ -77,7 +65,7 @@ input:focus {
 }
 
 textarea {
-  background-color: #444444;
+  background-color: transparent;
   margin: 1rem auto;
   display: block;
   width: 80%;
@@ -98,6 +86,7 @@ button {
   border: 2px solid #d1d1d1;
   background-color: #673AB7;
   box-shadow: none;
+  color: white;
   width: 8rem;
   padding: .5rem;
   display: block;
