--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, max-scale=1">
+    <meta name="theme-color" content="#301b56"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="HUSTCA义务维修队">
     <meta name="author" content="Silhouette">
