[Magic Change]Add some messages and flags
* Add activity flag: "预约中", and add messages in service view so users
can post their infomation in advance.
* Make service activity data editable.
* Add inform flag: "待确认", and change the default state to "待确认",
in the aim of ACCEPTING APPOINTMENTS and DEFEND SMS BOMBING.
* Add messages show in templates -> own_flag.html

--- a/templates/service_inform/own_flag.html
+++ b/templates/service_inform/own_flag.html
@@ -9,7 +9,21 @@
 
 <div class="middle-container">
   <div class="middle-wrap">
-    <h2>个人页面</h2>
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.level_tag }}">
+                        <a href="#" class="close" data-dismiss="alert">&times;</a>
+                        <strong>
+                            {% if 'safe' in message.tags %}{{ message|safe }}{% else %}{{ message }}{% endif %}</strong>
+                    </div>
+                {% endfor %}
+            {% endif %}
+    <h2>电脑信息页面</h2>
+    <div class="single-container">
+      <p>
+      本次活动地点：{{ place }}
+      </p>
+    </div>
     <div class="single-container">
       <p>
       姓名:{{ name }}
